# dash-shap

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ANALYSIS_demo_benchmark_4.md  AUDIT_demo_benchmark_3.md  AUDIT_demo_benchmark_4.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  EXPERIMENT_GUIDE.md  FAQ.md  LICENSE  Makefile  README.md  REPRODUCE.md  ROADMAP.md  add_sections.py  cleanup_pycache.sh  demo_benchmark.ipynb  large_single.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_experiments.py  run_experiments_parallel.py  setup_dash.sh
.claude/: .alfred-root  .collective-pending.json  .last-signal-push  .onboarding-state.json  .pilot-consent.json  .pilot-identity.json  .pilot-session-start  .session-bookmark.json  alfred.yaml  settings.json
.claude/commands/: audit.md  bootstrap.md  checkpoint-clear.md  ci-fix.md  commit.md  experiment-summary.md  health-check.md  new-work.md  notebook-status.md  paper-context-arxiv.md  paper-context.md  pr.md  run-tests.md  safe-refactor.md  self-improve.md  sync-check.md  vet.md
.claude/hooks/: alfred-config.sh  ci-on-change.sh  feedback-capture.sh  latex-lint-on-write.sh  notebook-size-check.sh  pilot-telemetry.sh  pre-compact.sh  ruff-format-on-write.sh  self-improve-check.sh  session-bookmark.sh  session-start.sh  sync-check-on-edit.sh
.claude/personas/: ml-ds.md
.githooks/: pre-commit  pre-push
.github/workflows/: branch-guards.yml  ci-autofix.yml  ci.yml
.ipynb_checkpoints/: demo_benchmark-checkpoint.ipynb  demo_benchmark_2-checkpoint.ipynb
.pilot/telemetry/: d511eb10-c955-42b7-8cbc-0dd49f58cde9.json
dash/: __init__.py
dash/baselines/: __init__.py  ensemble_shap.py  large_single.py  lightgbm_single.py  naive_averaging.py  permutation_importance.py  random_forest.py  random_selection.py  single_best.py  stochastic_retrain.py
dash/core/: consensus.py  diagnostics.py  diversity.py  filtering.py  pipeline.py  population.py
dash/evaluation/: __init__.py
dash/experiments/: __init__.py  synthetic.py
dash/utils/: __init__.py  io.py
dash_shap/: __init__.py  cli.py  config.py  quick.py  stability.py
dash_shap.egg-info/: PKG-INFO  SOURCES.txt
dash_shap/baselines/: __init__.py  ensemble_shap.py  large_single.py  lightgbm_single.py  naive_averaging.py  nn_baselines.py  permutation_importance.py  random_forest.py  random_selection.py  single_best.py  stochastic_retrain.py
dash_shap/core/: __init__.py  consensus.py  diagnostics.py  diversity.py  filtering.py  nn_attribution.py  nn_population.py  pipeline.py  population.py  rashomon_search.py  result.py
dash_shap/evaluation/: __init__.py
dash_shap/experiments/: __init__.py  schemas.py  synthetic.py
dash_shap/extensions/: __init__.py  _base.py  audit.py  causal.py  certification.py  confidence.py  drift.py  federated.py  groups.py  local.py  model_selection.py  partial_order.py  selection.py  theory_bridge.py
dash_shap/utils/: __init__.py  checkpoint.py  io.py  provenance.py  shap_helpers.py  thread_budget.py
docs/: AI_ASSISTED_DEV_GUIDE.md  API_REFERENCE.md  BENCHMARK_RESULTS.md  CI.md  DIAGNOSTICS.md  EXTENSIONS.md  EXTENSIONS_GUIDE.md  EXTENSIONS_USER_GUIDE.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  NN_GENERALIZATION_DESIGN.md  PEER_REVIEW.md  RESEARCH.md  RESEARCH_DIRECTIONS.md  RESEARCH_REFERENCE.md  regulatory_brief.md
docs/archive/: IMPLEMENTATION_PLAN.md
docs/audit/: 2026-03-24-REPORT.md  2026-03-24-notebooks.md  2026-03-24-preprint.md  2026-03-24-release.md  2026-03-24-sensitive.md  2026-04-03-REPORT.md  2026-04-03-notebooks.md  2026-04-03-preprint.md  2026-04-03-release.md  2026-04-03-sensitive.md  2026-04-16-REPORT.md  2026-04-16-notebooks.md  2026-04-16-preprint.md  2026-04-16-release.md  2026-04-16-sensitive.md  README.md
docs/blog/: linkedin_post.md  reddit_post.md  shap_instability_blog.md  twitter_thread.md
docs/private/: comms_strategy.md  extensions.md  extensions_user_guide.md  nn_generalization_design.md  (+10 more)
examples/: extensions_quickstart.py  quickcheck.py  quickcheck_regression.py  quickstart.py  real_world_workflow.py
notebooks/: demo_benchmark_3.ipynb  demo_benchmark_4.ipynb  demo_benchmark_4_checkpointed.ipynb  demo_benchmark_5.ipynb  demo_benchmark_6.ipynb  demo_benchmark_6_results.ipynb  demo_benchmark_7.ipynb  demo_benchmark_7_parallel.ipynb  explore_experiment_results.ipynb  explore_experiment_results_parallel.ipynb  nn_validation_phase0.ipynb  quickstart.ipynb  tutorial_01_the_problem.ipynb  tutorial_02_dash_walkthrough.ipynb  tutorial_03_interpreting_outputs.ipynb  tutorial_04_simulation.ipynb
paper/: Makefile  REVIEW_v5_arxiv.md  REVIEW_v6.md  REVIEW_v6_arxiv.md  REVIEW_v6_arxiv_2.md  REVIEW_v7.md  arxiv_abstract.txt  draft_v1.tex  draft_v2_preprint.tex  draft_v3_preprint.tex  draft_v4_preprint.tex  draft_v5_preprint.tex  draft_v6_preprint.tex  draft_v7_preprint.tex  draft_v7_tmlr.tex  draft_v8_reviewer_response.tex  impossibility.tex
results/: PROVENANCE.md  README.md  cross_domain_validation.json  environment.json  run_summary_instance1.txt
scripts/: backfill_meta.py  check_notebook_ids.py  find_checkpoints.sh  impossibility_simulation.py  sagemaker_finalize_run.sh  sagemaker_run.sh
tests/: conftest.py  test_baselines.py  test_baselines_extended.py  test_benchmark_regression.py  test_cli_smoke.py  test_consensus.py  test_coverage_conflict.py  test_diagnostics.py  test_diversity_filtering.py  test_evaluation.py  test_experiments.py  test_impossibility.py  test_nn_pipeline.py  test_pipeline.py  test_quick.py  test_rashomon_search.py  test_result.py  test_stability.py  test_synthetic.py  test_thread_budget.py  test_utils.py
theory_bridge/: __init__.py  cross_domain_validation.py  eta_definitive.py  eta_group_validation.py  eta_law_validation.py  eta_shap_correlation.py  extended_predictions.py  info_theoretic_validation.py  mi_only_dependence_test.py  model_class_comparison.py  model_class_rigorous.py  results_enhanced.txt  spectral_validation.py  test_bimodality.py  test_coverage_conflict.py  test_interactions.py  test_variance_bound.py  validate_predictions.py
(+50 files in other folders)
