[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dash-shap"
version = "0.1.0"
description = "DASH: Diversified Aggregation of SHAP"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["shap", "explainability", "xgboost", "feature-importance", "collinearity"]
authors = [
  {name = "Drake Caraker"},
  {name = "Bryan Arnold"},
  {name = "David Rhoads"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24.0",
  "scipy>=1.11.0",
  "scikit-learn>=1.4.0",
  "xgboost>=2.0.0,<3.1",
  "shap>=0.44.0",
  "joblib>=1.3.0",
  "matplotlib>=3.8.0",
  "pandas>=2.0.0",
  "seaborn>=0.13.0",
  "tqdm>=4.65.0",
]

[project.optional-dependencies]
lightgbm = ["lightgbm>=3.3"]

[project.urls]
Homepage = "https://github.com/DrakeCaraker/dash-shap"
Paper = "https://doi.org/10.5281/zenodo.19060133"

[tool.setuptools.packages.find]
include = ["dash_shap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.ruff]
target-version = "py39"
line-length = 120
extend-exclude = ["notebooks/"]

[tool.ruff.lint]
# Start conservative: catch real bugs, not style
select = ["F", "E4", "E7", "E9"]
ignore = [
    "F401",   # unused imports (many intentional re-exports in __init__.py)
    "F541",   # f-string missing placeholders (common in notebooks)
    "F811",   # redefined-while-unused (notebook cell patterns)
    "E701",   # multiple statements on one line (colon)
    "E702",   # multiple statements on one line (semicolon)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"notebooks/*" = ["E", "F"]
"tests/*" = ["F841"]
"dash_shap/evaluation/*" = ["F841"]
"run_experiments*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.report]
fail_under = 70

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
exclude = ["notebooks/", "paper/", "docs/"]
